crates/cuda-core/tests/launch_contract/fail_wrong_rank.stderr
error[E0308]: mismatched types
  --> tests/launch_contract/fail_wrong_rank.rs:24:13
   |
24 |     prepare(LaunchConfig2D::new((1, 1), (32, 1), 0));
   |     ------- ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `LaunchConfig1D`, found `LaunchConfig2D`
   |     |
   |     arguments to this function are incorrect
   |
note: function defined here
  --> tests/launch_contract/fail_wrong_rank.rs:21:4
   |
21 | fn prepare(_: <OneDimensionalKernel as KernelLaunchContract>::Config) {}
   |    ^^^^^^^ ---------------------------------------------------------
